--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+
+
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +20,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tarea1PMDM"
         tools:targetApi="31">
+        <activity
+            android:name=".CrearAlarma"
+            android:exported="false" />
+        <activity
+            android:name=".ModificarCredenciales"
+            android:exported="false" />
+        <activity
+            android:name=".LoginCorrecto"
+            android:exported="false" />
+        <activity
+            android:name=".Login"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
